--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "expression-service",
-	"version": "1.2.1",
+	"version": "1.3.0",
 	"description": "Expression Service",
+	"type": "module",
 	"main": "dst/index.js",
 	"types": "dst/index.d.ts",
 	"hopmepage": "https://github.com/rbaghbanli/expression-service",
