--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
 		"sourceMap": false,
 		"strict": true,
 		"stripInternal": true,
-		"target": "es2020",
+		"target": "ES2020",
 		"typeRoots": [
 			"node_modules/@types"
 		]
