--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,7 +29,7 @@
 		"default-case": 1,
 		"dot-location": [ 1, "property" ],
 		"dot-notation": 1,
-		"eqeqeq": [ 2, "smart" ],
+		"eqeqeq": 0,
 		"guard-for-in": 1,
 		"no-alert": 2,
 		"no-caller": 2,
@@ -101,7 +101,7 @@
 		"arrow-spacing": [ 2, { "before": true, "after": true } ],
 		"constructor-super": 2,
 		"generator-star-spacing": [ 2, "before" ],
-		"no-confusing-arrow": 2,
+		"no-confusing-arrow": 0,
 		"no-constant-condition": 2,
 		"no-class-assign": 2,
 		"no-const-assign": 2,
