--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
 	"name": "expression-service",
-	"version": "2.3.3",
+	"version": "2.3.4",
 	"description": "Expression Service",
-	"type": "module",
-	"main": "dst/index.js",
+	"main": "dst/cjs/index.js",
+	"module": "dst/index.js",
 	"types": "dst/index.d.ts",
+	"type": "module",
 	"hopmepage": "https://github.com/rbaghbanli/expression-service",
 	"bugs": "https://github.com/rbaghbanli/expression-service/issues",
 	"author": "Riad Baghbanli <riad@baghbanli.com>",
@@ -25,23 +26,30 @@
 	"scripts": {
 		"lint": "eslint ./src --ext .ts",
 		"lintfix": "eslint ./src --ext .ts --fix",
-		"clean": "rimraf --glob dst/* && rimraf --glob *.tgz",
-		"build": "tsc --build",
-		"prepare": "npm run clean && npm run build",
-		"pretest": "npm run clean && tsc --build tsconfig.test.json",
-		"test": "node dst/test"
+		"prebuild": "rimraf --glob dst/* && rimraf --glob *.tgz",
+		"build": "tsc --build tsconfig-esm.json && tsc --build tsconfig-cjs.json",
+		"prepare": "npm run build && copyfiles ./cjs/package.json ./dst",
+		"pretest": "npm run prebuild && tsc --build tsconfig-test.json",
+		"test": "cd dst && node test"
 	},
 	"license": "MIT",
 	"repository": {
 		"type": "git",
 		"url": "https://github.com/rbaghbanli/expression-service.git"
 	},
+	"exports": {
+		".": {
+			"import": "./dst/index.js",
+			"require": "./dst/cjs/index.js"
+		}
+	},
 	"dependencies": {},
 	"devDependencies": {
 		"@typescript-eslint/parser": "~5.60.0",
 		"@typescript-eslint/eslint-plugin": "~5.60.0",
-		"eslint": "~8.43.0",
-		"rimraf": "~5.0.1",
-		"typescript": "~4.7.4"
+		"copyfiles": "~2.4.1",
+		"eslint": "~8.56.0",
+		"rimraf": "~5.0.5",
+		"typescript": "~5.3.3"
 	}
 }
