type tests added

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,6 +4,7 @@
 		"declaration": false,
 		"module": "NodeNext",
 		"moduleResolution": "NodeNext",
+		"sourceMap": true,
 		"outDir": "./dst",
 	},
 	"include": [
