--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
-	"name": "expression-evaluation",
-	"version": "2.3.3",
-	"description": "Expression Evaluation",
+	"name": "affinirum",
+	"version": "1.0.0",
+	"description": "Affinirum Scripting Language",
 	"main": "dst/cjs/index.js",
 	"module": "dst/index.js",
 	"types": "dst/index.d.ts",
 	"type": "module",
-	"hopmepage": "https://github.com/rbaghbanli/expression-evaluation",
-	"bugs": "https://github.com/rbaghbanli/expression-evaluation/issues",
+	"hopmepage": "https://github.com/rbaghbanli/affinirum",
+	"bugs": "https://github.com/rbaghbanli/affinirum/issues",
 	"author": "Riad Baghbanli <riad@baghbanli.com>",
 	"contributors": [
 		{
@@ -43,7 +43,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/rbaghbanli/expression-evaluation.git"
+		"url": "https://github.com/rbaghbanli/affinirum.git"
 	},
 	"exports": {
 		".": {
@@ -53,12 +53,12 @@
 	},
 	"dependencies": {},
 	"devDependencies": {
-		"@types/jasmine": "~5.1.4",
+		"@types/jasmine": "~5.1.7",
 		"copyfiles": "~2.4.1",
-		"eslint": "~8.57.0",
-		"jasmine": "~5.3.1",
+		"eslint": "~9.24.0",
+		"jasmine": "~5.6.0",
 		"rimraf": "~6.0.1",
-		"typescript": "~5.5.4",
-		"typescript-eslint": "^7.17.0"
+		"typescript": "~5.8.3",
+		"typescript-eslint": "~8.30.1"
 	}
 }
