--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
 		}
 	],
 	"keywords": [
-		"Expression",
-		"Evaluation",
-		"parser",
-		"compiler",
-		"evaluator",
-		"boolean",
+		"Affinirum",
+		"parsing",
+		"compilation",
+		"evaluation",
+		"void",
 		"number",
+		"boolean",
+		"timestamp",
+		"integer",
 		"buffer",
 		"string",
 		"array",
 		"object",
-		"function",
-		"void"
+		"function"
 	],
 	"scripts": {
 		"clean": "rimraf --glob dst/* && rimraf --glob *.tgz",
@@ -55,7 +56,7 @@
 	"devDependencies": {
 		"@types/jasmine": "~5.1.7",
 		"copyfiles": "~2.4.1",
-		"eslint": "~9.25.0",
+		"eslint": "~9.25.1",
 		"jasmine": "~5.6.0",
 		"rimraf": "~6.0.1",
 		"typescript": "~5.8.3",
