--- a/package.json
+++ b/package.json
@@ -8,22 +8,24 @@
 	"type": "module",
 	"hopmepage": "https://github.com/affinir/affinirum",
 	"bugs": "https://github.com/affinir/affinirum/issues",
-	"author": "Riad Baghbanli <riad@baghbanli.com>",
+	"author": "Riad Baghbanli <riadb@affinir.com>",
 	"contributors": [
 		{
 			"name": "Riad Baghbanli",
-			"email": "riad@baghbanli.com"
+			"email": "riadb@affinir.com"
 		}
 	],
 	"keywords": [
 		"Affinirum",
+		"scripting",
+		"language",
 		"parsing",
 		"compilation",
 		"evaluation",
 		"void",
-		"float",
 		"boolean",
 		"timestamp",
+		"float",
 		"integer",
 		"buffer",
 		"string",
@@ -44,7 +46,7 @@
 	"license": "AGPLv3.0",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/rbaghbanli/affinirum.git"
+		"url": "https://github.com/affinir/affinirum.git"
 	},
 	"exports": {
 		".": {
@@ -57,9 +59,9 @@
 		"@types/jasmine": "~5.1.7",
 		"copyfiles": "~2.4.1",
 		"eslint": "~9.25.1",
-		"jasmine": "~5.6.0",
+		"jasmine": "~5.7.0",
 		"rimraf": "~6.0.1",
 		"typescript": "~5.8.3",
-		"typescript-eslint": "~8.30.1"
+		"typescript-eslint": "~8.31.1"
 	}
 }
